[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.31"
flutter_rust_bridge = "=2.0.0-dev.41"
log = "0.*"
log4rs = "1.2.*"
polars = { version = "0.37.0", features = ["lazy", "csv"] }
segul = { git = "https://github.com/hhandika/segul.git", branch = "dev" }
