[package]
name = "segul_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "*"
segul = { git = "https://github.com/hhandika/segul.git", branch = "dev" }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
